--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.3.3'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.3.5"
+    implementation "androidx.navigation:navigation-ui-ktx:2.3.5"
     kapt 'com.google.dagger:hilt-compiler:2.35'
     implementation "io.reactivex.rxjava3:rxjava:3.0.12"
     implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
